logo sizing fix on mobile

--- a/site/static/css/base.css
+++ b/site/static/css/base.css
@@ -134,7 +134,8 @@ a {
 		display: block;
 		float: none;
 		margin: auto;
-		max-width: 100%;
+		width: 100%;
+		max-width: 500px;
 		height: auto;
 	}
 	.header-nav {
